--- a/cn/index.html
+++ b/cn/index.html
@@ -956,6 +956,57 @@
                     <div class="xe-comment"><a href="#" class="xe-user-name overflowClip_1"><strong>梅花网</strong></a><p class="overflowClip_2">营销广告案例</p></div>
                 </div>
             </div>
+			    <!-- 文案提取 -->
+    <div class="col-sm-3">
+        <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://www.huoke8.cn/api/content', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="文案提取">
+            <div class="xe-comment-entry">
+                <a class="xe-user-img">
+                    <img src="https://www.google.com/s2/favicons?domain=www.huoke8.cn&sz=64" class="img-circle" width="40">
+                </a>
+                <div class="xe-comment">
+                    <a href="#" class="xe-user-name overflowClip_1">
+                        <strong>文案提取</strong>
+                    </a>
+                    <p class="overflowClip_2">视频文案一键提取</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Twitter 视频下载器 -->
+    <div class="col-sm-3">
+        <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://twittervideodownloader.com/en/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Twitter 视频下载器">
+            <div class="xe-comment-entry">
+                <a class="xe-user-img">
+                    <img src="https://www.google.com/s2/favicons?domain=twittervideodownloader.com&sz=64" class="img-circle" width="40">
+                </a>
+                <div class="xe-comment">
+                    <a href="#" class="xe-user-name overflowClip_1">
+                        <strong>Twitter 视频下载器</strong>
+                    </a>
+                    <p class="overflowClip_2">推特视频保存工具</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 免费在线视频解析下载 -->
+    <div class="col-sm-3">
+        <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.vlogdownloader.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Parsevideo">
+            <div class="xe-comment-entry">
+                <a class="xe-user-img">
+                    <img src="https://www.google.com/s2/favicons?domain=www.vlogdownloader.com&sz=64" class="img-circle" width="40">
+                </a>
+                <div class="xe-comment">
+                    <a href="#" class="xe-user-name overflowClip_1">
+                        <strong>Parsevideo</strong>
+                    </a>
+                    <p class="overflowClip_2">免费在线视频解析下载</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
         </div>
     </div>
     <br />
