--- a/cn/index.html
+++ b/cn/index.html
@@ -1003,40 +1003,96 @@
     </div>
     <br />
 
-    <!-- 外部灵感与资源 -->
+      <!-- 外部灵感与资源 -->
     <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="外部灵感与资源"></i>外部灵感与资源</h4>
     <div class="row">
+        <!-- 谷歌 -->
         <div class="col-sm-3">
-            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://huaban.com/', '_blank')" data-toggle="tooltip" title="花瓣网">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.google.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="谷歌">
                 <div class="xe-comment-entry">
-                    <a class="xe-user-img"><img src="https://www.google.com/s2/favicons?domain=huaban.com&sz=64" class="img-circle" width="40"></a>
-                    <div class="xe-comment"><a href="#" class="xe-user-name overflowClip_1"><strong>花瓣网</strong></a><p class="overflowClip_2">设计师灵感库</p></div>
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=www.google.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>谷歌</strong>
+                        </a>
+                        <p class="overflowClip_2">全球最大的搜索引擎</p>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <!-- 维基百科 -->
         <div class="col-sm-3">
-            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.pexels.com/zh-cn/', '_blank')" data-toggle="tooltip" title="Pexels">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://zh.wikipedia.org/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="维基百科">
                 <div class="xe-comment-entry">
-                    <a class="xe-user-img"><img src="https://www.google.com/s2/favicons?domain=www.pexels.com&sz=64" class="img-circle" width="40"></a>
-                    <div class="xe-comment"><a href="#" class="xe-user-name overflowClip_1"><strong>Pexels</strong></a><p class="overflowClip_2">免费高清无版权图库</p></div>
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=zh.wikipedia.org&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>维基百科</strong>
+                        </a>
+                        <p class="overflowClip_2">自由的百科全书</p>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <!-- Youtube -->
         <div class="col-sm-3">
-            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://wallhaven.cc/', '_blank')" data-toggle="tooltip" title="Wallhaven">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.youtube.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Youtube">
                 <div class="xe-comment-entry">
-                    <a class="xe-user-img"><img src="https://www.google.com/s2/favicons?domain=wallhaven.cc&sz=64" class="img-circle" width="40"></a>
-                    <div class="xe-comment"><a href="#" class="xe-user-name overflowClip_1"><strong>Wallhaven</strong></a><p class="overflowClip_2">顶级壁纸网站</p></div>
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=www.youtube.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>Youtube</strong>
+                        </a>
+                        <p class="overflowClip_2">全球最大的视频分享平台</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- X -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://x.com/home', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="X">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=x.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>X</strong>
+                        </a>
+                        <p class="overflowClip_2">社交网络服务</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- NETFLIX -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.netflix.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="NETFLIX">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=www.netflix.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>NETFLIX</strong>
+                        </a>
+                        <p class="overflowClip_2">流媒体播放平台</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <br />
 
-    <!-- ====================================================
-         04 商务与政务
-         ==================================================== -->
-    
     <!-- 本地政务 -->
     <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="本地政务"></i>本地政务</h4>
     <div class="row">
