--- a/cn/index.html
+++ b/cn/index.html
@@ -1168,6 +1168,23 @@
                 </div>
             </div>
         </div>
+		        <!-- 湖南电子税务总局 -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://etax.hunan.chinatax.gov.cn:8443/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="湖南电子税务总局">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=etax.hunan.chinatax.gov.cn&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>湖南电子税务总局</strong>
+                        </a>
+                        <p class="overflowClip_2">网上办税服务厅</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
     <br />
 
