--- a/cn/index.html
+++ b/cn/index.html
@@ -1214,6 +1214,57 @@
                     <div class="xe-comment"><a href="#" class="xe-user-name overflowClip_1"><strong>株洲赵云</strong></a><p class="overflowClip_2">智能用户运营平台</p></div>
                 </div>
             </div>
+			        <!-- 企业预警通 -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.qyyjt.cn/user/login', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="企业预警通">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=www.qyyjt.cn&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>企业预警通</strong>
+                        </a>
+                        <p class="overflowClip_2">企业风险监控平台</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- 探迹 -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://user.tungee.com/home', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="探迹">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=www.tungee.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>探迹</strong>
+                        </a>
+                        <p class="overflowClip_2">智能销售云平台</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- 小蓝本 -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.xiaolanben.com/login', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="小蓝本">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=www.xiaolanben.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>小蓝本</strong>
+                        </a>
+                        <p class="overflowClip_2">企业情报与商业查询</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         </div>
     </div>
     <br />
