--- a/cn/index.html
+++ b/cn/index.html
@@ -1188,33 +1188,61 @@
     </div>
     <br />
 
-    <!-- 获客与企业查询 -->
+     <!-- 获客与企业查询 -->
     <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="获客与企业查询"></i>获客与企业查询</h4>
     <div class="row">
+        <!-- 企查查 -->
         <div class="col-sm-3">
-            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.qcc.com/', '_blank')" data-toggle="tooltip" title="企查查">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.qcc.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="企查查">
                 <div class="xe-comment-entry">
-                    <a class="xe-user-img"><img src="https://www.google.com/s2/favicons?domain=www.qcc.com&sz=64" class="img-circle" width="40"></a>
-                    <div class="xe-comment"><a href="#" class="xe-user-name overflowClip_1"><strong>企查查</strong></a><p class="overflowClip_2">企业信用查询</p></div>
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=www.qcc.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>企查查</strong>
+                        </a>
+                        <p class="overflowClip_2">企业信用查询</p>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <!-- 天眼查 -->
         <div class="col-sm-3">
-            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.tianyancha.com/', '_blank')" data-toggle="tooltip" title="天眼查">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.tianyancha.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="天眼查">
                 <div class="xe-comment-entry">
-                    <a class="xe-user-img"><img src="https://www.google.com/s2/favicons?domain=www.tianyancha.com&sz=64" class="img-circle" width="40"></a>
-                    <div class="xe-comment"><a href="#" class="xe-user-name overflowClip_1"><strong>天眼查</strong></a><p class="overflowClip_2">商业安全工具</p></div>
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=www.tianyancha.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>天眼查</strong>
+                        </a>
+                        <p class="overflowClip_2">商业安全工具</p>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <!-- 株洲科云 -->
         <div class="col-sm-3">
-            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://cos.byai.com/login?source=cos', '_blank')" data-toggle="tooltip" title="株洲赵云">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://cos.byai.com/login?source=cos', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="株洲科云">
                 <div class="xe-comment-entry">
-                    <a class="xe-user-img"><img src="https://www.google.com/s2/favicons?domain=cos.byai.com&sz=64" class="img-circle" width="40"></a>
-                    <div class="xe-comment"><a href="#" class="xe-user-name overflowClip_1"><strong>株洲赵云</strong></a><p class="overflowClip_2">智能用户运营平台</p></div>
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=cos.byai.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>株洲科云</strong>
+                        </a>
+                        <p class="overflowClip_2">智能用户运营平台</p>
+                    </div>
                 </div>
             </div>
-			        <!-- 企业预警通 -->
+        </div>
+
+        <!-- 企业预警通 -->
         <div class="col-sm-3">
             <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.qyyjt.cn/user/login', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="企业预警通">
                 <div class="xe-comment-entry">
@@ -1264,10 +1292,9 @@
                 </div>
             </div>
         </div>
-
-        </div>
     </div>
     <br />
+
 
     <!-- ====================================================
          05 通用工具箱
