--- a/cn/index.html
+++ b/cn/index.html
@@ -1319,6 +1319,119 @@
                 </div>
             </div>
         </div>
+		        <!-- 短地址转换 -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.bejson.com/convert/shorturl/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="短地址转换">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=www.bejson.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>短地址转换</strong>
+                        </a>
+                        <p class="overflowClip_2">在线短链接生成</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 文本去重工具 -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://lgai666.com/tools_formatter_text', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="文本去重工具">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=lgai666.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>文本去重工具</strong>
+                        </a>
+                        <p class="overflowClip_2">在线文本去重</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- SnapCute(图切宝) -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://snapcute.toolooz.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="SnapCute(图切宝)">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=snapcute.toolooz.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>SnapCute(图切宝)</strong>
+                        </a>
+                        <p class="overflowClip_2">社交媒体图片切割</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- MD5在线加密 -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.sojson.com/encrypt_md5.html', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="MD5在线加密">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=www.sojson.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>MD5在线加密</strong>
+                        </a>
+                        <p class="overflowClip_2">MD5加密解密</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 草料二维码 -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://cli.im/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="草料二维码">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=cli.im&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>草料二维码</strong>
+                        </a>
+                        <p class="overflowClip_2">在线二维码生成</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- K-Lite Codec Pack -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.codecguide.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="K-Lite Codec Pack">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=www.codecguide.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>K-Lite Codec Pack</strong>
+                        </a>
+                        <p class="overflowClip_2">视频解码器包</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- pdf工具 -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.ilovepdf.com/zh-cn', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="iLovePDF">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=www.ilovepdf.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>iLovePDF</strong>
+                        </a>
+                        <p class="overflowClip_2">在线PDF处理工具</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
     <br />
 
