--- a/cn/index.html
+++ b/cn/index.html
@@ -1454,6 +1454,23 @@
                 </div>
             </div>
         </div>
+		        <!-- 临时邮箱 -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://maildrop.cc/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="临时邮箱">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=maildrop.cc&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>临时邮箱</strong>
+                        </a>
+                        <p class="overflowClip_2">免费临时邮箱服务</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="col-sm-3">
             <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://universalbus.cn/', '_blank')" data-toggle="tooltip" title="账号合租平台">
                 <div class="xe-comment-entry">
