--- a/cn/index.html
+++ b/cn/index.html
@@ -788,6 +788,22 @@
             </div>
         </div>
     </div>
+        <!-- 视频号助手 -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://channels.weixin.qq.com/login.html', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="视频号助手">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=channels.weixin.qq.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>视频号助手</strong>
+                        </a>
+                        <p class="overflowClip_2">微信视频号创作平台</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     <!-- 百家号 -->
     <div class="col-sm-3">
