--- a/cn/index.html
+++ b/cn/index.html
@@ -1351,6 +1351,23 @@
                 </div>
             </div>
         </div>
+		        <!-- 图片压缩 -->
+        <div class="col-sm-3">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://yasuo.xunjiepdf.com/img/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="图片压缩">
+                <div class="xe-comment-entry">
+                    <a class="xe-user-img">
+                        <img src="https://www.google.com/s2/favicons?domain=yasuo.xunjiepdf.com&sz=64" class="img-circle" width="40">
+                    </a>
+                    <div class="xe-comment">
+                        <a href="#" class="xe-user-name overflowClip_1">
+                            <strong>图片压缩</strong>
+                        </a>
+                        <p class="overflowClip_2">在线图片压缩工具</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- 文本去重工具 -->
         <div class="col-sm-3">
             <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://lgai666.com/tools_formatter_text', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="文本去重工具">
