--- a/cn/index.html
+++ b/cn/index.html
@@ -1241,20 +1241,23 @@
             </div>
         </div>
 
-        <!-- 株洲科云 -->
+              <!-- 百应电销 -->
         <div class="col-sm-3">
-            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://cos.byai.com/login?source=cos', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="株洲科云">
+            <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://cos.byai.com/login/source=cos', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="百应电销">
                 <div class="xe-comment-entry">
                     <a class="xe-user-img">
                         <img src="https://www.google.com/s2/favicons?domain=cos.byai.com&sz=64" class="img-circle" width="40">
                     </a>
                     <div class="xe-comment">
                         <a href="#" class="xe-user-name overflowClip_1">
-                            <strong>株洲科云</strong>
+                            <strong>百应电销</strong>
                         </a>
                         <p class="overflowClip_2">智能用户运营平台</p>
                     </div>
                 </div>
+            </div>
+        </div>
+
             </div>
         </div>
 
