--- a/cn/index.html
+++ b/cn/index.html
@@ -63,9 +63,12 @@
                 <header class="logo-env">
                     <!-- logo -->
                     <div class="logo">
-                        <a href="index.html" class="logo-expanded">
-                            <img src="../assets/images/logo@2x.png" width="100%" alt="" />
-                        </a>
+                                           <a href="index.html" class="logo-expanded">
+                        <div style="padding: 18px 20px 10px 20px;">
+                            <span style="color: #fff; font-size: 22px; font-weight: bold; display: block;">金刚导航库</span>
+                            <span style="color: #b0b0b0; font-size: 12px; display: block; margin-top: 5px;">一站式提升工作效率</span>
+                        </div>
+                    </a>
                         <a href="index.html" class="logo-collapsed">
                             <img src="../assets/images/logo-collapsed@2x.png" width="40" alt="" />
                         </a>
