--- a/cn/about.html
+++ b/cn/about.html
@@ -52,14 +52,13 @@
     <nav class="navbar horizontal-menu navbar-fixed-top">
         <div class="navbar-inner">
             <div class="navbar-brand">
-                <a href="index.html" class="logo">
-                    <img src="../assets/images/logo_dark@2x.png" width="100%" alt="" class="hidden-xs">
-                    <img src="../assets/images/logo@2x.png" width="100%" alt="" class="visible-xs">
+                              <a href="index.html" class="logo" style="line-height: 80px; text-decoration: none;">
+                    <span style="color: #333; font-size: 24px; font-weight: bold;">金刚导航库</span>
                 </a>
             </div>
             <div class="navbar-mobile-clear"></div>
             <a href="https://github.com/WebStackPage/WebStackPage.github.io" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
-        </div>
+      
     </nav>
     <div class="page-container">
         <!-- add class "sidebar-collapsed" to close sidebar by default, "chat-visible" to make chat appear always -->
