--- a/cn/index.html
+++ b/cn/index.html
@@ -195,7 +195,7 @@
                 </ul>
                 <ul class="user-info-menu right-links list-inline list-unstyled">
                     <li class="hidden-sm hidden-xs">
-                        <a href="https://github.com/jgzx33/jgzx33.github.io/blob/master/cn/index.html" target="_blank">
+                        <a href="https://github.com/jgzx33/jgzx33.github.io" target="_blank">
                             <i class="fa-github"></i>  GitHub
                         </a>
                     </li>
