--- a/cn/about.html
+++ b/cn/about.html
@@ -75,6 +75,38 @@
                             <p>里面有些链接需要魔法才能打开，仅供学习，禁止商业获利！</p>
                             <br>
                             <p>欢迎交流，我的V：pos241 备注：github</p>
+                            <!-- 网站维护锦囊开始 -->
+<br><br>
+<div style="border-top: 1px dashed #ddd; padding-top: 20px;">
+    <details>
+        <summary style="cursor:pointer; outline:none; color: #555;">
+            <i class="fa fa-key" style="color: #f1404b;"></i>
+            <span style="font-weight:bold;"> 点击获取：网站维护 AI 提问锦囊</span>
+        </summary>
+        <div style="background: #f9f9f9; padding: 15px; border-radius: 5px; margin-top: 10px; font-size: 13px; line-height: 1.6; color: #333; text-align: left;">
+            <p style="font-size: 14px; font-weight: bold; color: #000;">📂 下次提问的“标准起手式”</p>
+            <p>下次想修改网站时，复制下面框里的内容发给 AI：</p>
+            <div style="background: #fff; border: 1px solid #eee; padding: 10px; margin-bottom: 10px; user-select: all;">
+                【背景介绍】<br>
+                我正在维护一个基于 GitHub Pages 托管的静态导航网站。<br>
+                使用的模板是 WebStack（Viggo 版本）。<br><br>
+                【我的情况】<br>
+                1. 我不懂代码，请务必用最通俗的语言指导我。<br>
+                2. 指导时，请明确告诉我修改第几行，是删除还是替换。<br>
+                3. 如果涉及代码修改，请直接把修改后的完整代码写给我，让我复制粘贴。<br><br>
+                【当前文件结构】<br>
+                我的主页文件通常是 index.html。<br><br>
+                【现在的任务】<br>
+                （在这里写你想改什么...）
+            </div>
+            <p><strong>💡 记得配合两个动作：</strong><br>
+            1. 把要修改的 html 文件拖进聊天窗口（最重要）。<br>
+            2. 截图圈出要修改的位置。</p>
+        </div>
+    </details>
+</div>
+<!-- 网站维护锦囊结束 -->
+
                         </blockquote>
                                 </div>
                             </div>
