--- a/cn/index.html
+++ b/cn/index.html
@@ -1092,6 +1092,23 @@
                 </div>
             </div>
         </div>
+		<!-- 自媒体素材总链接 -->
+<div class="col-sm-3">
+    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.kdocs.cn/l/cpuqntjZjMi4?R=L1MvMg==', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="自媒体素材总链接">
+        <div class="xe-comment-entry">
+            <a class="xe-user-img">
+                <img src="https://www.google.com/s2/favicons?domain=www.kdocs.cn&sz=64" class="img-circle" width="40">
+            </a>
+            <div class="xe-comment">
+                <a href="#" class="xe-user-name overflowClip_1">
+                    <strong>自媒体素材总链接</strong>
+                </a>
+                <p class="overflowClip_2">自媒体素材收集整理</p>
+            </div>
+        </div>
+    </div>
+</div>
+
 		        <!-- 追剧小能手资源总库 -->
         <div class="col-sm-3">
             <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.kdocs.cn/l/cvMqgQn2fXKi', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="追剧小能手资源总库">
