--- a/cn/index.html
+++ b/cn/index.html
@@ -1330,6 +1330,44 @@
         </div>
     </div>
     <br />
+			<!-- 金融与信贷 -->
+<h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="金融与信贷"></i>金融与信贷</h4>
+<div class="row">
+    <!-- 我要有钱网 -->
+    <div class="col-sm-3">
+        <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.51youqian.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="我要有钱网">
+            <div class="xe-comment-entry">
+                <a class="xe-user-img">
+                    <img src="https://www.google.com/s2/favicons?domain=www.51youqian.com&sz=64" class="img-circle" width="40">
+                </a>
+                <div class="xe-comment">
+                    <a href="#" class="xe-user-name overflowClip_1">
+                        <strong>我要有钱网</strong>
+                    </a>
+                    <p class="overflowClip_2">金融信贷服务平台</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 卡农社区 -->
+    <div class="col-sm-3">
+        <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://daikuan.51kanong.com/Portal/article_list/cid_7_1', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="卡农社区">
+            <div class="xe-comment-entry">
+                <a class="xe-user-img">
+                    <img src="https://www.google.com/s2/favicons?domain=daikuan.51kanong.com&sz=64" class="img-circle" width="40">
+                </a>
+                <div class="xe-comment">
+                    <a href="#" class="xe-user-name overflowClip_1">
+                        <strong>卡农社区</strong>
+                    </a>
+                    <p class="overflowClip_2">专业的信贷交流社区</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<br />
+
 
 
     <!-- ====================================================
